--- a/style.css
+++ b/style.css
@@ -9,14 +9,17 @@
 :root {
   --black: #171717;
   --white: #ffffff;
-  --grey: #f7f7f7;
+  --background: #f7f7f7;
+  --grey: #818181;
   --font: 'Karla', sans-serif;
+  --border: #ebebeb;
 }
 
 body {
   font-family: var(--font);
   font-size: 16px;
   font-weight: 400;
+  background-color: var(--background);
 }
 
 h1 {
@@ -31,7 +34,7 @@ h1 {
 }
 
 .nav {
-  background-color: var(--grey);
+  background-color: var(--background);
 }
 
 nav,
@@ -69,7 +72,8 @@ header ul {
   background-color: var(--black);
 }
 
-header ul {
+header ul,
+footer ul {
   text-decoration: none;
   list-style-type: none;
   color: #ffffff;
@@ -79,4 +83,78 @@ header ul {
 
 header ul li:first-child {
   border-bottom: 2px solid #ffffff;
+}
+
+section .card {
+  background-color: var(--white);
+  margin-top: 60px;
+  padding: 30px;
+  border-radius: 15px;
+}
+
+.card-header,
+.card-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card h3,
+.card-footer p:first-child,
+.comments-wrapper p:last-child {
+  font-size: 1em;
+  font-weight: 400;
+  color: var(--grey);
+}
+
+.card-header h3 {
+  margin-bottom: 10px;
+}
+
+.card-header {
+  border-bottom: 1px solid var(--border);
+}
+
+.card-footer {
+  margin-top: 20px;
+}
+
+.card-body p {
+  font-size: 1.5em;
+  font-weight: 700;
+  margin-top: 20px;
+}
+
+.comments-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.comment-icon {
+  width: 14px;
+  height: 14px;
+  margin-right: 5px;
+}
+
+.footer {
+  background-color: var(--black);
+  color: var(--white);
+  margin-top: 60px;
+  text-align: center;
+}
+
+footer h3 {
+  font-weight: 700;
+  padding-bottom: 20px 0 20px 0;
+}
+
+.footer-header {
+  border-bottom: 1px solid #ffffff;
+  padding: 20px 0 20px 0;
+}
+
+footer ul li {
+  padding: 10px 0;
+  font-size: 1em;
+  font-weight: 400;
 }
