Footer - Mobile Update

--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ section .card {
   color: var(--white);
   margin-top: 60px;
   text-align: center;
+  padding: 40px 0 60px 0;
 }
 
 footer h3 {
@@ -149,12 +150,28 @@ footer h3 {
 }
 
 .footer-header {
-  border-bottom: 1px solid #ffffff;
-  padding: 20px 0 20px 0;
+  position: relative;
+}
+
+.footer-header:after {
+  content: '';
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border-color: #ffffff;
+  border-style: solid;
+  height: 1px;
+  width: 80%;
+  /* padding: 20px 0 20px 0; */
+  /* opacity: 0.5; */
 }
 
 footer ul li {
   padding: 10px 0;
   font-size: 1em;
   font-weight: 400;
+}
+
+footer ul li:first-child {
+  margin-top: 20px;
 }
